# graphiti

./: .env_cursor  GRAPHITI_OLLAMA_SETUP.md  INTERACTION_GUIDE.md  QUICKSTART_GUIDE.md  README.md  TEST_RESULTS_SUMMARY.md  docker-compose.yml
.cursor/rules/: graphiti-memory.mdc
graphiti_core/llm_client/: gemini_client.py
mcp_server/: .env_cursor  .gitignore  Dockerfile  README.md  README_GEMINI_OLLAMA.md  docker-compose.yml  export_data.py  graphiti_mcp_server.py  graphiti_mcp_server_gemini_ollama.py  graphiti_mcp_server_simple.py  import_data.py  kg_code.md  ollama_embedder.py  ollama_reranker_client.py  pyproject.toml  vertex_ai_client.py
